Changed layout of conhecimentos page

--- a/public/conhecimentos.html
+++ b/public/conhecimentos.html
@@ -40,227 +40,80 @@
       </nav>
     </div>
   </section>
+
   <div class="space"></div>
 
   <main class="knowledge-container">
-    <section>
-      <div>
-        <h2>Backend / Banco de dados <i class="ph-fill ph-database default-icon-color"></i></h2>
-        <div class="backend-container">
-          <ol class="card-container" type="A">
-            <li style="margin-left: 2rem;">
-              <div>
-                <h3 class="card-title">Java</h3>
-                <img src="./images/java-logo.png" alt="Logo da linguagem de programação Java">
-              </div>
-              <span>
-                <p class="intermediate-knowleadge">Intermediário</p>
-              </span>
-            </li>
-            <li>
-              <div>
-                <h3 class="card-title">Spring</h3>
-                <img src="./images/spring-logo.svg" alt="Logo do framework Spring">
-              </div>
-              <span>
-                <p class="intermediate-knowleadge">Intermediário</p>
-              </span>
-            </li>
-            <li>
-              <div>
-                <h3 class="card-title">PHP</h3>
-                <img src="./images/php-logo.png" alt="Logo da linguagem PHP">
-              </div>
-              <span>
-                <p class="basic-knowleadge">Básico</p>
-              </span>
-            </li>
-            <li>
-              <div>
-                <h3 class="card-title">Laravel</h3>
-                <img src="./images/laravel-logo.png" alt="Logo do framework Laravel">
-              </div>
-              <span>
-                <p class="basic-knowleadge">Básico</p>
-              </span>
-            </li>
-            <li>
-              <div>
-                <h3 class="card-title">ExpressJS</h3>
-                <img src="./images/expressjs.png" alt="Logo da blibloteca ExpressJS">
-              </div>
-              <span>
-                <p class="basic-knowleadge">Básico</p>
-              </span>
-            </li>
-            <li>
-              <div>
-                <h3 class="card-title">MySql</h3>
-                <img src="./images/mysql-logo.svg" alt="Logo do banco de dados MySql">
-              </div>
-              <span>
-                <p class="basic-knowleadge">Básico</p>
-              </span>
-            </li>
-            <li>
-              <div>
-                <h3 class="card-title">Postgres</h3>
-                <img src="./images/postgres-logo.png" alt="Logo do banco de dados Postegres">
-              </div>
-              <span>
-                <p class="basic-knowleadge">Básico</p>
-              </span>
-            </li>
-          </ol>
-        </div>
-      </div>
-    </section>
-    <section>
-      <div>
-        <h2>Frontend <i class="ph-bold ph-monitor default-icon-color"></i></h2>
-        <div class="frontend-container">
-          <ol class="card-container" type="A">
-            <li style="margin-left: 2rem;">
-              <div>
-                <h3 class="card-title">HTML</h3>
-                <img src="./images/html-logo.png" alt="Logo da linguagem de marcação HTML">
-              </div>
-              <span>
-                <p class="intermediate-knowleadge">Intermediário</p>
-              </span>
-            </li>
-            <li>
-              <div>
-                <h3 class="card-title">CSS</h3>
-                <img src="./images/css-logo.png" alt="Logo da linguagem de estilizção CSS">
-              </div>
-              <span>
-                <p class="intermediate-knowleadge">Intermediário</p>
-              </span>
-            </li>
-            <li>
-              <div>
-                <h3 class="card-title">Javascript</h3>
-                <img src="./images/javascript-logo.svg" alt="Logo da linguagem de programação Javascript">
-              </div>
-              <span>
-                <p class="intermediate-knowleadge">Intermediário</p>
-              </span>
-            </li>
-            <li>
-              <div>
-                <h3 class="card-title">Typescript</h3>
-                <img src="./images/typescript-logo.svg" alt="Logo do superset Typescript">
-              </div>
-              <span>
-                <p class="intermediate-knowleadge">Intermediário</p>
-              </span>
-            </li>
-            <li>
-              <div>
-                <h3 class="card-title">React JS</h3>
-                <img src="./images/react-icon.png" alt="Logo da biblioteca React">
-              </div>
-              <span>
-                <p class="intermediate-knowleadge">Intermediário</p>
-              </span>
-            </li>
-            <li>
-              <div>
-                <h3 class="card-title">Angular 2+</h3>
-                <img src="./images/angular-logo.png" alt="Logo do framework Angular">
-              </div>
-              <span>
-                <p class="intermediate-knowleadge">Intermediário</p>
-              </span>
-            </li>
-            <li>
-              <div>
-                <h3 class="card-title">Vue JS</h3>
-                <img src="./images/vue-logo.png" alt="Logo do framework Vue Js">
-              </div>
-              <span>
-                <p class="basic-knowleadge">Básico</p>
-              </span>
-            </li>
-          </ol>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <div>
-        <h2>Infra / Ferramentas <i class="ph-bold ph-wrench default-icon-color"></i></h2>
-        <div class="network-container">
-          <ol class="card-container" type="A">
-            <li style="margin-left: 2rem;">
-              <div>
-                <h3 class="card-title">Sophos XG</h3>
-                <img src="./images/sophos-logo.svg" alt="Logo da empresa Sophos">
-              </div>
-              <span>
-                <p class="advanced-knowleadge">Avançado</p>
-              </span>
-            </li>
-            <li>
-              <div>
-                <h3 class="card-title">Server 2012</h3>
-                <img src="./images/windows-logo.png" alt="Logo do windows">
-              </div>
-              <span>
-                <p class="advanced-knowleadge">Avançado</p>
-              </span>
-            </li>
-            <li>
-              <div>
-                <h3 class="card-title">Docker</h3>
-                <img src="./images/docker-logo.svg" alt="Logo do docker">
-              </div>
-              <span>
-                <p class="intermediate-knowleadge">Intermediário</p>
-              </span>
-            </li>
-            <li>
-              <div>
-                <h3 class="card-title">Postman</h3>
-                <img src="./images/postman-logo.png" alt="Logo do postman">
-              </div>
-              <span>
-                <p class="intermediate-knowleadge">Intermediário</p>
-              </span>
-            </li>
-            <li>
-              <div>
-                <h3 class="card-title">AWS</h3>
-                <img src="./images/aws-logo.png" alt="Logo do AWS">
-              </div>
-              <span>
-                <p class="basic-knowleadge">Básico</p>
-              </span>
-            </li>
-            <li>
-              <div>
-                <h3 class="card-title">Git</h3>
-                <img src="./images/git-logo.png" alt="Logo do AWS">
-              </div>
-              <span>
-                <p class="basic-knowleadge">Básico</p>
-              </span>
-            </li>
-            <li>
-              <div>
-                <h3 class="card-title">Github</h3>
-                <img src="./images/github-logo.png" alt="Logo do AWS">
-              </div>
-              <span>
-                <p class="basic-knowleadge">Básico</p>
-              </span>
-            </li>
-          </ol>
-        </div>
-      </div>
-    </section>
+    <ol class="card-container" type="A">
+      <li>
+        <h3 class="card-title">Java</h3>
+        <img src="./images/java-logo.png" alt="Logo da linguagem de programação Java">
+      </li>
+      <li>
+        <h3 class="card-title">Spring</h3>
+        <img src="./images/spring-logo.svg" alt="Logo do framework Spring">
+      </li>
+      <li>
+        <h3 class="card-title">PHP</h3>
+        <img src="./images/php-logo.png" alt="Logo da linguagem PHP">
+      </li>
+      <li>
+        <h3 class="card-title">Laravel</h3>
+        <img src="./images/laravel-logo.png" alt="Logo do framework Laravel">
+      </li>
+      <li>
+        <h3 class="card-title">ExpressJS</h3>
+        <img src="./images/expressjs.png" alt="Logo da blibloteca ExpressJS">
+      </li>
+      <li>
+        <h3 class="card-title">MySql</h3>
+        <img src="./images/mysql-logo.svg" alt="Logo do banco de dados MySql">
+      </li>
+      <li>
+        <h3 class="card-title">Postgres</h3>
+        <img src="./images/postgres-logo.png" alt="Logo do banco de dados Postegres">
+      </li>
+      <li>
+        <h3 class="card-title">HTML</h3>
+        <img src="./images/html-logo.png" alt="Logo da linguagem de marcação HTML">
+      </li>
+      <li>
+        <h3 class="card-title">CSS</h3>
+        <img src="./images/css-logo.png" alt="Logo da linguagem de estilizção CSS">
+      </li>
+      <li>
+        <h3 class="card-title">Javascript</h3>
+        <img src="./images/javascript-logo.svg" alt="Logo da linguagem de programação Javascript">
+      </li>
+      <li>
+        <h3 class="card-title">Typescript</h3>
+        <img src="./images/typescript-logo.svg" alt="Logo do superset Typescript">
+      </li>
+      <li>
+        <h3 class="card-title">React JS</h3>
+        <img src="./images/react-icon.png" alt="Logo da biblioteca React">
+      </li>
+      <li>
+        <h3 class="card-title">Angular</h3>
+        <img src="./images/angular-logo.png" alt="Logo do framework Angular">
+      </li>
+      <li>
+        <h3 class="card-title">Docker</h3>
+        <img src="./images/docker-logo.svg" alt="Logo do docker">
+      </li>
+      <li>
+          <h3 class="card-title">AWS</h3>
+          <img src="./images/aws-logo.png" alt="Logo do AWS">
+      </li>
+      <li>
+          <h3 class="card-title">Git</h3>
+          <img src="./images/git-logo.png" alt="Logo do AWS">
+      </li>
+      <li>
+          <h3 class="card-title">Github</h3>
+          <img src="./images/github-logo.png" alt="Logo do AWS">
+      </li>
+    </ol>
   </main>
 </body>
-
 </html>
