Removed all display flex and responsive screens

--- a/public/conhecimentos.html
+++ b/public/conhecimentos.html
@@ -12,36 +12,29 @@
   <link rel="stylesheet" href="./styles/styles.css">
 
   <title>Conhecimentos - Bruno Juwer</title>
-
-  <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
 
 <body>
   <section class="navbar">
-    <div class="image-container">
-      <img src="./images/bruno.jpg" alt="Foto de Bruno Juwer">
-    </div>
     <div class="nav-container">
+      <div class="image-container">
+        <img src="./images/bruno.jpg" alt="Foto de Bruno Juwer">
+      </div>
       <nav>
         <ul>
           <li>
-            <a href="./index.html">SOBRE</a>
-            <i style="color:var(--dark-primary) ;" class="ph-bold ph-dot-outline"></i>
+            <a  href="./index.html">SOBRE</a>
           </li>
-          <li>
-            <a href="./conhecimentos.html">CONHECIMENTOS</a>
-            <i class="ph-bold ph-dot-outline"></i>
+          <li> 
+            <a style="opacity: 1;" href="./conhecimentos.html">CONHECIMENTOS</a>
           </li>
           <li>
             <a href="./objetivos.html">OBJETIVOS</a>
-            <i style="color:var(--dark-primary) ;" class="ph-bold ph-dot-outline"></i>
           </li>
         </ul>
       </nav>
     </div>
   </section>
-
-  <div class="space"></div>
 
   <main class="knowledge-container">
     <ol class="card-container" type="A">
@@ -62,16 +55,16 @@
         <img src="./images/laravel-logo.png" alt="Logo do framework Laravel">
       </li>
       <li>
-        <h3 class="card-title">ExpressJS</h3>
-        <img src="./images/expressjs.png" alt="Logo da blibloteca ExpressJS">
-      </li>
-      <li>
         <h3 class="card-title">MySql</h3>
         <img src="./images/mysql-logo.svg" alt="Logo do banco de dados MySql">
       </li>
       <li>
         <h3 class="card-title">Postgres</h3>
         <img src="./images/postgres-logo.png" alt="Logo do banco de dados Postegres">
+      </li>
+      <li>
+        <h3 class="card-title">Docker</h3>
+        <img src="./images/docker-logo.svg" alt="Logo do docker">
       </li>
       <li>
         <h3 class="card-title">HTML</h3>
@@ -84,34 +77,6 @@
       <li>
         <h3 class="card-title">Javascript</h3>
         <img src="./images/javascript-logo.svg" alt="Logo da linguagem de programação Javascript">
-      </li>
-      <li>
-        <h3 class="card-title">Typescript</h3>
-        <img src="./images/typescript-logo.svg" alt="Logo do superset Typescript">
-      </li>
-      <li>
-        <h3 class="card-title">React JS</h3>
-        <img src="./images/react-icon.png" alt="Logo da biblioteca React">
-      </li>
-      <li>
-        <h3 class="card-title">Angular</h3>
-        <img src="./images/angular-logo.png" alt="Logo do framework Angular">
-      </li>
-      <li>
-        <h3 class="card-title">Docker</h3>
-        <img src="./images/docker-logo.svg" alt="Logo do docker">
-      </li>
-      <li>
-          <h3 class="card-title">AWS</h3>
-          <img src="./images/aws-logo.png" alt="Logo do AWS">
-      </li>
-      <li>
-          <h3 class="card-title">Git</h3>
-          <img src="./images/git-logo.png" alt="Logo do AWS">
-      </li>
-      <li>
-          <h3 class="card-title">Github</h3>
-          <img src="./images/github-logo.png" alt="Logo do AWS">
       </li>
     </ol>
   </main>
