--- a/public/index.html
+++ b/public/index.html
@@ -12,52 +12,47 @@
     
     <title>Sobre - Bruno Juwer</title>
 
-    <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
   <body>
     <section class="navbar">
-      <div class="image-container">
-        <img src="./images/bruno.jpg" alt="Foto de Bruno Juwer">
-      </div>
       <div class="nav-container">
+        <div class="image-container">
+          <img src="./images/bruno.jpg" alt="Foto de Bruno Juwer">
+        </div>
         <nav>
           <ul>
             <li>
-              <a href="./index.html">SOBRE </a>
-              <i class="ph-bold ph-dot-outline"></i>
+              <a style="opacity: 1;" href="./index.html">SOBRE</a>
             </li>
             <li> 
               <a href="./conhecimentos.html">CONHECIMENTOS</a>
-              <i style="color:var(--dark-primary) ;" class="ph-bold ph-dot-outline"></i>
             </li>
             <li>
               <a href="./objetivos.html">OBJETIVOS</a>
-              <i style="color:var(--dark-primary) ;" class="ph-bold ph-dot-outline"></i>
             </li>
           </ul>
         </nav>
       </div>
     </section>
-    <div class="space"></div>
-
     <main class="about-container">
-      <h1>Bruno <span>Juwer</span></h1>
-      <div class="info-container">
-        <address>Rua Arroio Jaguar, Alto Feliz - RS</address>
-        <div class="contact-container">
-          <div>
-            <strong>
-              Email: &nbsp;
-            </strong>
-            <a href="mailto:bruno.juwer1997@gmail.com">bruno.juwer1997@gmail.com</a>
+      <div>
+        <h1>Bruno <span>Juwer</span></h1>
+        <div class="info-container">
+          <address>Rua Arroio Jaguar, Alto Feliz - RS</address>
+          <div class="contact-container">
+            <div>
+              <strong>
+                Email: &nbsp;
+              </strong>
+              <a href="mailto:bruno.juwer1997@gmail.com">bruno.juwer1997@gmail.com</a>
+            </div>
+            <div>
+              <strong>
+                Número: &nbsp;
+              </strong>
+              <a href="tel:+5551995035116">(51) 9 95035116</a>
+            </div>
           </div>
-          <div>
-            <strong>
-              Número: &nbsp;
-            </strong>
-            <a href="tel:+5551995035116">(51) 9 95035116</a>
-          </div>
-        </div>
       </div>
       <div class="about-me">
         <p>
@@ -69,21 +64,22 @@
         <ul>
           <li>
             <a href="https://www.github.com/brunojuwer" target="_blank">
-              <i class="ph-duotone ph-github-logo"></i>
+              <img src="./images/github.png" alt="Logo github" />
             </a>
           </li>
           <li>
             <a href="https://www.linkedin.com/in/bruno-juwer/" target="_blank">
-              <i class="ph-duotone ph-linkedin-logo"></i>
+              <img src="./images/linkedin.png" alt="Logo linkedin" />
             </a>
           </li>
           <li>
             <a href="https://twitter.com/BrunoJuwer" target="_blank">
-              <i class="ph-duotone ph-twitter-logo"></i>
+              <img src="./images/Twitter.png" alt="Logo twitter" />
             </a>
           </li>
         </ul>
       </div>
+    </div>
     </main>
   </body>
 </html>
