--- a/public/objetivos.html
+++ b/public/objetivos.html
@@ -13,35 +13,29 @@
 
   <title>Objetivos - Bruno Juwer</title>
 
-  <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
 
 <body>
   <section class="navbar">
-    <div class="image-container">
-      <img src="./images/bruno.jpg" alt="Foto de Bruno Juwer">
-    </div>
     <div class="nav-container">
+      <div class="image-container">
+        <img src="./images/bruno.jpg" alt="Foto de Bruno Juwer">
+      </div>
       <nav>
         <ul>
           <li>
             <a href="./index.html">SOBRE</a>
-            <i style="color:var(--dark-primary) ;" class="ph-bold ph-dot-outline"></i>
           </li>
-          <li>
+          <li> 
             <a href="./conhecimentos.html">CONHECIMENTOS</a>
-            <i style="color:var(--dark-primary) ;" class="ph-bold ph-dot-outline"></i>
           </li>
           <li>
-            <a href="./objetivos.html">OBJETIVOS</a>
-            <i class="ph-bold ph-dot-outline"></i>
+            <a style="opacity: 1;" href="./objetivos.html">OBJETIVOS</a>
           </li>
         </ul>
       </nav>
     </div>
   </section>
-  <div class="space"></div>
-
   <main class="goals">
     <section>
       <h2>Profissionais <i class="ph ph-briefcase-metal default-icon-color"></i></h2>
