Fixed indentation of all pages

--- a/public/index.html
+++ b/public/index.html
@@ -1,85 +1,89 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" sizes="16x16"  href="./images/favicon-16x16.png">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="theme-color" content="#ffffff">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="./styles/styles.css">
-    
-    <title>Sobre - Bruno Juwer</title>
+	<link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="theme-color" content="#ffffff">
 
-  </head>
-  <body>
-    <section class="navbar">
-      <div class="nav-container">
-        <div class="image-container">
-          <img src="./images/bruno.jpg" alt="Foto de Bruno Juwer">
-        </div>
-        <nav>
-          <ul>
-            <li>
-              <a style="opacity: 1;" href="./index.html">SOBRE</a>
-            </li>
-            <li> 
-              <a href="./conhecimentos.html">CONHECIMENTOS</a>
-            </li>
-            <li>
-              <a href="./objetivos.html">OBJETIVOS</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </section>
-    <main class="about-container">
-      <div>
-        <h1>Bruno <span>Juwer</span></h1>
-        <div class="info-container">
-          <address>Rua Arroio Jaguar, Alto Feliz - RS</address>
-          <div class="contact-container">
-            <div>
-              <strong>
-                Email: &nbsp;
-              </strong>
-              <a href="mailto:bruno.juwer1997@gmail.com">bruno.juwer1997@gmail.com</a>
-            </div>
-            <div>
-              <strong>
-                Número: &nbsp;
-              </strong>
-              <a href="tel:+5551995035116">(51) 9 95035116</a>
-            </div>
-          </div>
-      </div>
-      <div class="about-me">
-        <p>
-          <i class="ph-fill ph-hand-waving"></i>
-          Seja bem-vindo(a) ao meu currículo, sou um desenvolverdor fullstack apaixonado por técnologia e música!
-        </p>
-      </div>
-      <div class="social-media-container">
-        <ul>
-          <li>
-            <a href="https://www.github.com/brunojuwer" target="_blank">
-              <img src="./images/github.png" alt="Logo github" />
-            </a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/bruno-juwer/" target="_blank">
-              <img src="./images/linkedin.png" alt="Logo linkedin" />
-            </a>
-          </li>
-          <li>
-            <a href="https://twitter.com/BrunoJuwer" target="_blank">
-              <img src="./images/Twitter.png" alt="Logo twitter" />
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    </main>
-  </body>
+	<link rel="stylesheet" href="./styles/styles.css">
+
+	<title>Sobre - Bruno Juwer</title>
+
+</head>
+
+<body>
+	<section class="navbar">
+		<div class="nav-container">
+			<div class="image-container">
+				<img src="./images/bruno.jpg" alt="Foto de Bruno Juwer">
+			</div>
+			<nav>
+				<ul>
+					<li>
+						<a style="opacity: 1;" href="./index.html">SOBRE</a>
+					</li>
+					<li>
+						<a href="./conhecimentos.html">CONHECIMENTOS</a>
+					</li>
+					<li>
+						<a href="./objetivos.html">OBJETIVOS</a>
+					</li>
+				</ul>
+			</nav>
+		</div>
+	</section>
+	<main class="about-container">
+		<div>
+			<h1>Bruno <span>Juwer</span></h1>
+			<section class="info-container">
+				<address>Rua Arroio Jaguar, Alto Feliz - RS</address>
+				<div class="contact-container">
+					<div>
+						<strong>
+							Email: &nbsp;
+						</strong>
+						<a href="mailto:bruno.juwer1997@gmail.com">bruno.juwer1997@gmail.com</a>
+					</div>
+					<div>
+						<strong>
+							Número: &nbsp;
+						</strong>
+						<a href="tel:+5551995035116">(51) 9 95035116</a>
+					</div>
+				</div>
+			</section>
+			<section class="about-me">
+				<p>
+					<i class="ph-fill ph-hand-waving"></i>
+					Seja bem-vindo(a) ao meu currículo, sou um desenvolverdor fullstack apaixonado por técnologia e
+					música!
+				</p>
+			</section>
+			<section class="social-media-container">
+				<ul>
+					<li>
+						<a href="https://www.github.com/brunojuwer" target="_blank">
+							<img src="./images/github.png" alt="Logo github" />
+						</a>
+					</li>
+					<li>
+						<a href="https://www.linkedin.com/in/bruno-juwer/" target="_blank">
+							<img src="./images/linkedin.png" alt="Logo linkedin" />
+						</a>
+					</li>
+					<li>
+						<a href="https://twitter.com/BrunoJuwer" target="_blank">
+							<img src="./images/Twitter.png" alt="Logo twitter" />
+						</a>
+					</li>
+				</ul>
+			</section>
+		</div>
+	</main>
+</body>
+
 </html>
