Fixed margin percentage

--- a/public/objetivos.html
+++ b/public/objetivos.html
@@ -38,7 +38,7 @@
 	</section>
 	<main class="goals">
 		<section>
-			<h2>Profissionais <i class="ph ph-briefcase-metal default-icon-color"></i></h2>
+			<h2>Profissionais</h2>
 			<div>
 				<ul>
 					<li>Finalizar com sucesso o Programa <span>Despertar.Dev</span></li>
@@ -48,7 +48,7 @@
 			</div>
 		</section>
 		<section>
-			<h2>Pessoais <i class="ph ph-user default-icon-color"></i></h2>
+			<h2>Pessoais</h2>
 			<div>
 				<ul>
 					<li>Me cercar de pessoas boas</li>
