Changed icons and style from index page

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,6 @@
 	<link rel="stylesheet" href="./styles/styles.css">
 
 	<title>Sobre - Bruno Juwer</title>
-
 </head>
 
 <body>
@@ -67,17 +66,17 @@
 				<ul>
 					<li>
 						<a href="https://www.github.com/brunojuwer" target="_blank">
-							<img src="./images/github.png" alt="Logo github" />
+							<img class="social-media-img" src="./images/github-logo.svg" alt="Logo github" />
 						</a>
 					</li>
 					<li>
 						<a href="https://www.linkedin.com/in/bruno-juwer/" target="_blank">
-							<img src="./images/linkedin.png" alt="Logo linkedin" />
+							<img class="social-media-img" src="./images/linkedin-logo.svg" alt="Logo linkedin" />
 						</a>
 					</li>
 					<li>
 						<a href="https://twitter.com/BrunoJuwer" target="_blank">
-							<img src="./images/Twitter.png" alt="Logo twitter" />
+							<img class="social-media-img" src="./images/twitter-logo.svg" alt="Logo twitter" />
 						</a>
 					</li>
 				</ul>
