refactor some styles and html

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<section class="navbar">
+	<aside class="navbar">
 		<div class="nav-container">
 			<div class="image-container">
 				<img src="./images/bruno.jpg" alt="Foto de Bruno Juwer">
@@ -34,10 +34,10 @@
 				</ul>
 			</nav>
 		</div>
-	</section>
+	</aside>
 	<main class="about-container">
 		<div>
-			<h1>Bruno <span>Juwer</span></h1>
+			<h1>Bruno <span class="highlighted-text">Juwer</span></h1>
 			<section class="info-container">
 				<address>Rua Arroio Jaguar, Alto Feliz - RS</address>
 				<div class="contact-container">
