--- a/public/objetivos.html
+++ b/public/objetivos.html
@@ -37,26 +37,28 @@
 		</div>
 	</section>
 	<main class="goals">
-		<section>
-			<h2>Profissionais</h2>
-			<div>
-				<ul>
-					<li>Finalizar com sucesso o Programa <span>Despertar.Dev</span></li>
-					<li>Ser contratado pelo patrocinador do programa a <span>Cooperativa Sicredi Pioneira</span></li>
-					<li>Finalizar a faculdade de Análise e Desenvolvimento de Sistemas</li>
-				</ul>
-			</div>
-		</section>
-		<section>
-			<h2>Pessoais</h2>
-			<div>
-				<ul>
-					<li>Me cercar de pessoas boas</li>
-					<li>Manter uma rotina saudável tanto fisicamente quanto mentalmente</li>
-					<li>Me tornar uma pessoa melhor a cada dia</li>
-				</ul>
-			</div>
-		</section>
+		<div>
+			<section>
+				<h2>Profissionais</h2>
+				<div class="card">
+					<ul>
+						<li>Finalizar com sucesso o Programa <span class="highlighted-text" >Despertar.Dev</span></li>
+						<li>Ser contratado pelo patrocinador do programa a <span class="highlighted-text">Cooperativa Sicredi Pioneira</span></li>
+						<li>Finalizar a faculdade de Análise e Desenvolvimento de Sistemas</li>
+					</ul>
+				</div>
+			</section>
+			<section>
+				<h2>Pessoais</h2>
+				<div class="card">
+					<ul>
+						<li>Me cercar de pessoas boas</li>
+						<li>Manter uma rotina saudável tanto fisicamente quanto mentalmente</li>
+						<li>Me tornar uma pessoa melhor a cada dia</li>
+					</ul>
+				</div>
+			</section>
+		</div>
 	</main>
 </body>
 
