Changed bruno photo and social media icons

--- a/public/conhecimentos.html
+++ b/public/conhecimentos.html
@@ -18,7 +18,7 @@
 	<section class="navbar">
 		<div class="nav-container">
 			<div class="image-container">
-				<img src="./images/bruno.jpg" alt="Foto de Bruno Juwer">
+				<img src="./images/bruno.png" alt="Foto de Bruno Juwer">
 			</div>
 			<nav>
 				<ul>
