--- a/public/objetivos.html
+++ b/public/objetivos.html
@@ -19,7 +19,7 @@
 	<section class="navbar">
 		<div class="nav-container">
 			<div class="image-container">
-				<img src="./images/bruno.jpg" alt="Foto de Bruno Juwer">
+				<img src="./images/bruno.png" alt="Foto de Bruno Juwer">
 			</div>
 			<nav>
 				<ul>
