fixed text of index page

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 			<section class="about-me">
 				<p>
 					<i class="ph-fill ph-hand-waving"></i>
-					Seja bem-vindo(a) ao meu currículo, sou um desenvolverdor fullstack apaixonado por técnologia e
+					Seja bem-vindo(a) ao meu currículo, sou um desenvolvedor fullstack apaixonado por técnologia e
 					música!
 				</p>
 			</section>
