changed navbar container to an aside

--- a/public/conhecimentos.html
+++ b/public/conhecimentos.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<section class="navbar">
+	<aside class="navbar">
 		<div class="nav-container">
 			<div class="image-container">
 				<img src="./images/bruno.png" alt="Foto de Bruno Juwer">
@@ -34,7 +34,7 @@
 				</ul>
 			</nav>
 		</div>
-	</section>
+	</aside>
 
 	<main class="knowledge-container">
 		<ol class="card-container" type="A">
