--- a/public/objetivos.html
+++ b/public/objetivos.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<section class="navbar">
+	<aside class="navbar">
 		<div class="nav-container">
 			<div class="image-container">
 				<img src="./images/bruno.png" alt="Foto de Bruno Juwer">
@@ -35,7 +35,7 @@
 				</ul>
 			</nav>
 		</div>
-	</section>
+	</aside>
 	<main class="goals">
 		<div>
 			<section>
