--- a/public/index.html
+++ b/public/index.html
@@ -15,74 +15,78 @@
 </head>
 
 <body>
-	<aside class="navbar">
-		<div class="nav-container">
-			<div class="image-container">
-				<img src="./images/bruno.png" alt="Foto de Bruno Juwer">
-			</div>
-			<nav>
-				<ul>
-					<li>
-						<a style="opacity: 1;" href="./index.html">SOBRE</a>
-					</li>
-					<li>
-						<a href="./conhecimentos.html">CONHECIMENTOS</a>
-					</li>
-					<li>
-						<a href="./objetivos.html">OBJETIVOS</a>
-					</li>
-				</ul>
-			</nav>
-		</div>
-	</aside>
-	<main class="about-container">
-		<div>
-			<h1>Bruno <span class="highlighted-text">Juwer</span></h1>
-			<section class="info-container">
-				<address>Rua Arroio Jaguar, Alto Feliz - RS</address>
-				<div class="contact-container">
-					<div>
-						<strong>
-							Email: &nbsp;
-						</strong>
-						<a href="mailto:bruno.juwer1997@gmail.com">bruno.juwer1997@gmail.com</a>
-					</div>
-					<div>
-						<strong>
-							Número: &nbsp;
-						</strong>
-						<a href="tel:+5551995035116">(51) 9 95035116</a>
-					</div>
+	<div class="container-fluid">
+
+		<aside class="navbar">
+			<div class="nav-container">
+				<div class="image-container">
+					<img src="./images/bruno.png" alt="Foto de Bruno Juwer">
 				</div>
-			</section>
-			<section class="about-me">
-				<p>
-					<i class="ph-fill ph-hand-waving"></i>
-					Seja bem-vindo(a) ao meu currículo, sou um desenvolvedor fullstack apaixonado por técnologia e
-					música!
-				</p>
-			</section>
-			<section class="social-media-container">
-				<ul>
-					<li>
-						<a href="https://www.github.com/brunojuwer" target="_blank">
-							<img class="social-media-img" src="./images/github-logo.svg" alt="Logo github" />
-						</a>
-					</li>
-					<li>
-						<a href="https://www.linkedin.com/in/bruno-juwer/" target="_blank">
-							<img class="social-media-img" src="./images/linkedin-logo.svg" alt="Logo linkedin" />
-						</a>
-					</li>
-					<li>
-						<a href="https://twitter.com/BrunoJuwer" target="_blank">
-							<img class="social-media-img" src="./images/twitter-logo.svg" alt="Logo twitter" />
-						</a>
-					</li>
-				</ul>
-			</section>
-		</div>
-	</main>
+				<nav>
+					<ul>
+						<li>
+							<a style="opacity: 1;" href="./index.html">SOBRE</a>
+						</li>
+						<li>
+							<a href="./conhecimentos.html">CONHECIMENTOS</a>
+						</li>
+						<li>
+							<a href="./objetivos.html">OBJETIVOS</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</aside>
+		<main class="about-container">
+			<div>
+				<h1 class="">Bruno <span class="highlighted-text">Juwer</span></h1>
+				<section class="info-container">
+					<address>Rua Arroio Jaguar, Alto Feliz - RS</address>
+					<div class="contact-container">
+						<div>
+							<strong>
+								Email: &nbsp;
+							</strong>
+							<a href="mailto:bruno.juwer1997@gmail.com">bruno.juwer1997@gmail.com</a>
+						</div>
+						<div>
+							<strong>
+								Número: &nbsp;
+							</strong>
+							<a href="tel:+5551995035116">(51) 9 95035116</a>
+						</div>
+					</div>
+				</section>
+				<section class="about-me">
+					<p>
+						<i class="ph-fill ph-hand-waving"></i>
+						Seja bem-vindo(a) ao meu currículo, sou um desenvolvedor fullstack apaixonado por técnologia e
+						música!
+					</p>
+				</section>
+				<section class="social-media-container">
+					<ul>
+						<li>
+							<a href="https://www.github.com/brunojuwer" target="_blank">
+								<img class="social-media-img" src="./images/github-logo.svg" alt="Logo github" />
+							</a>
+						</li>
+						<li>
+							<a href="https://www.linkedin.com/in/bruno-juwer/" target="_blank">
+								<img class="social-media-img" src="./images/linkedin-logo.svg" alt="Logo linkedin" />
+							</a>
+						</li>
+						<li>
+							<a href="https://twitter.com/BrunoJuwer" target="_blank">
+								<img class="social-media-img" src="./images/twitter-logo.svg" alt="Logo twitter" />
+							</a>
+						</li>
+					</ul>
+				</section>
+			</div>
+		</main>
+	</div>
+
 </body>
 
 </html>
