add bootstrap to all pages

--- a/public/conhecimentos.html
+++ b/public/conhecimentos.html
@@ -15,71 +15,74 @@
 </head>
 
 <body>
-	<aside class="navbar">
-		<div class="nav-container">
-			<div class="image-container">
-				<img src="./images/bruno.png" alt="Foto de Bruno Juwer">
-			</div>
-			<nav>
-				<ul>
-					<li>
-						<a href="./index.html">SOBRE</a>
-					</li>
-					<li>
-						<a style="opacity: 1;" href="./conhecimentos.html">CONHECIMENTOS</a>
-					</li>
-					<li>
-						<a href="./objetivos.html">OBJETIVOS</a>
-					</li>
-				</ul>
-			</nav>
-		</div>
-	</aside>
+	<div class="container-fluid">
 
-	<main class="knowledge-container">
-		<ol class="card-container" type="A">
-			<li>
-				<h3 class="card-title">Java</h3>
-				<img src="./images/java-logo.png" alt="Logo da linguagem de programação Java">
-			</li>
-			<li>
-				<h3 class="card-title">Spring</h3>
-				<img src="./images/spring-logo.svg" alt="Logo do framework Spring">
-			</li>
-			<li>
-				<h3 class="card-title">PHP</h3>
-				<img src="./images/php-logo.png" alt="Logo da linguagem PHP">
-			</li>
-			<li>
-				<h3 class="card-title">Laravel</h3>
-				<img src="./images/laravel-logo.png" alt="Logo do framework Laravel">
-			</li>
-			<li>
-				<h3 class="card-title">MySql</h3>
-				<img src="./images/mysql-logo.svg" alt="Logo do banco de dados MySql">
-			</li>
-			<li>
-				<h3 class="card-title">Postgres</h3>
-				<img src="./images/postgres-logo.png" alt="Logo do banco de dados Postegres">
-			</li>
-			<li>
-				<h3 class="card-title">Docker</h3>
-				<img src="./images/docker-logo.svg" alt="Logo do docker">
-			</li>
-			<li>
-				<h3 class="card-title">HTML</h3>
-				<img src="./images/html-logo.png" alt="Logo da linguagem de marcação HTML">
-			</li>
-			<li>
-				<h3 class="card-title">CSS</h3>
-				<img src="./images/css-logo.png" alt="Logo da linguagem de estilizção CSS">
-			</li>
-			<li>
-				<h3 class="card-title">Javascript</h3>
-				<img src="./images/javascript-logo.svg" alt="Logo da linguagem de programação Javascript">
-			</li>
-		</ol>
-	</main>
+		<aside class="navbar">
+			<div class="nav-container">
+				<div class="image-container">
+					<img src="./images/bruno.png" alt="Foto de Bruno Juwer">
+				</div>
+				<nav>
+					<ul>
+						<li>
+							<a href="./index.html">SOBRE</a>
+						</li>
+						<li>
+							<a style="opacity: 1;" href="./conhecimentos.html">CONHECIMENTOS</a>
+						</li>
+						<li>
+							<a href="./objetivos.html">OBJETIVOS</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</aside>
+
+		<main class="knowledge-container">
+			<ol class="card-container" type="A">
+				<li>
+					<h3 class="card-title">Java</h3>
+					<img src="./images/java-logo.png" alt="Logo da linguagem de programação Java">
+				</li>
+				<li>
+					<h3 class="card-title">Spring</h3>
+					<img src="./images/spring-logo.svg" alt="Logo do framework Spring">
+				</li>
+				<li>
+					<h3 class="card-title">PHP</h3>
+					<img src="./images/php-logo.png" alt="Logo da linguagem PHP">
+				</li>
+				<li>
+					<h3 class="card-title">Laravel</h3>
+					<img src="./images/laravel-logo.png" alt="Logo do framework Laravel">
+				</li>
+				<li>
+					<h3 class="card-title">MySql</h3>
+					<img src="./images/mysql-logo.svg" alt="Logo do banco de dados MySql">
+				</li>
+				<li>
+					<h3 class="card-title">Postgres</h3>
+					<img src="./images/postgres-logo.png" alt="Logo do banco de dados Postegres">
+				</li>
+				<li>
+					<h3 class="card-title">Docker</h3>
+					<img src="./images/docker-logo.svg" alt="Logo do docker">
+				</li>
+				<li>
+					<h3 class="card-title">HTML</h3>
+					<img src="./images/html-logo.png" alt="Logo da linguagem de marcação HTML">
+				</li>
+				<li>
+					<h3 class="card-title">CSS</h3>
+					<img src="./images/css-logo.png" alt="Logo da linguagem de estilizção CSS">
+				</li>
+				<li>
+					<h3 class="card-title">Javascript</h3>
+					<img src="./images/javascript-logo.svg" alt="Logo da linguagem de programação Javascript">
+				</li>
+			</ol>
+		</main>
+	</div>
 </body>
 
 </html>
