--- a/public/objetivos.html
+++ b/public/objetivos.html
@@ -16,50 +16,54 @@
 </head>
 
 <body>
-	<aside class="navbar">
-		<div class="nav-container">
-			<div class="image-container">
-				<img src="./images/bruno.png" alt="Foto de Bruno Juwer">
+	<div class="container-fluid">
+
+		<aside class="navbar">
+			<div class="nav-container">
+				<div class="image-container">
+					<img src="./images/bruno.png" alt="Foto de Bruno Juwer">
+				</div>
+				<nav>
+					<ul>
+						<li>
+							<a href="./index.html">SOBRE</a>
+						</li>
+						<li>
+							<a href="./conhecimentos.html">CONHECIMENTOS</a>
+						</li>
+						<li>
+							<a style="opacity: 1;" href="./objetivos.html">OBJETIVOS</a>
+						</li>
+					</ul>
+				</nav>
 			</div>
-			<nav>
-				<ul>
-					<li>
-						<a href="./index.html">SOBRE</a>
-					</li>
-					<li>
-						<a href="./conhecimentos.html">CONHECIMENTOS</a>
-					</li>
-					<li>
-						<a style="opacity: 1;" href="./objetivos.html">OBJETIVOS</a>
-					</li>
-				</ul>
-			</nav>
-		</div>
-	</aside>
-	<main class="goals">
-		<div>
-			<section>
-				<h2>Profissionais</h2>
-				<div class="card">
-					<ul>
-						<li>Finalizar com sucesso o Programa <span class="highlighted-text" >Despertar.Dev</span></li>
-						<li>Ser contratado pelo patrocinador do programa a <span class="highlighted-text">Cooperativa Sicredi Pioneira</span></li>
-						<li>Finalizar a faculdade de Análise e Desenvolvimento de Sistemas</li>
-					</ul>
-				</div>
-			</section>
-			<section>
-				<h2>Pessoais</h2>
-				<div class="card">
-					<ul>
-						<li>Me cercar de pessoas boas</li>
-						<li>Manter uma rotina saudável tanto fisicamente quanto mentalmente</li>
-						<li>Me tornar uma pessoa melhor a cada dia</li>
-					</ul>
-				</div>
-			</section>
-		</div>
-	</main>
+		</aside>
+		<main class="goals">
+			<div>
+				<section>
+					<h2>Profissionais</h2>
+					<div class="card">
+						<ul>
+							<li>Finalizar com sucesso o Programa <span class="highlighted-text">Despertar.Dev</span></li>
+							<li>Ser contratado pelo patrocinador do programa a <span class="highlighted-text">Cooperativa Sicredi
+									Pioneira</span></li>
+							<li>Finalizar a faculdade de Análise e Desenvolvimento de Sistemas</li>
+						</ul>
+					</div>
+				</section>
+				<section>
+					<h2>Pessoais</h2>
+					<div class="card">
+						<ul>
+							<li>Me cercar de pessoas boas</li>
+							<li>Manter uma rotina saudável tanto fisicamente quanto mentalmente</li>
+							<li>Me tornar uma pessoa melhor a cada dia</li>
+						</ul>
+					</div>
+				</section>
+			</div>
+		</main>
+	</div>
 </body>
 
 </html>
